--- a/app/src/main/res/layout/activity_finance.xml
+++ b/app/src/main/res/layout/activity_finance.xml
@@ -5,19 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/layoutGrey"
-    tools:context=".HomeActivity">
+    tools:context=".FinanceActivity">
 
     <TextView
         android:id="@+id/txt_header_finance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
         android:fontFamily="@font/vazir_bold"
-        android:text="سلام دکتر"
+        android:text="مدیریت مالی"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
