--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">#2C2E51</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="layoutGrey">#F6F8FC</color>
     <color name="hintGrey">#878787</color>
+    <color name="navBarGrey">#D8D8D8</color>
     <color name="fieldBorderGrey">#F0F0F0</color>
     <color name="navyBlue">#2C2E51</color>
     <color name="carbonBlue">#6582BC</color>
