--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,18 +7,284 @@
     android:background="@color/layoutGrey"
     tools:context=".HomeActivity">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/civ_user_home"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="34dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-        android:id="@+id/txt_header_finance"
+        android:id="@+id/tv_header_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:fontFamily="@font/vazir_bold"
-        android:text="سلام دکتر"
+        android:text="سلام دکتر جعفری"
         android:textColor="@color/black"
         android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@id/civ_user_home"
+        app:layout_constraintTop_toTopOf="@id/civ_user_home" />
+
+    <TextView
+        android:id="@+id/tv_date_home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="6dp"
+        android:fontFamily="@font/vazir_medium"
+        android:text=" یک شنبه ۳۰ شهریور"
+        android:textColor="#888aa6"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@id/civ_user_home"
+        app:layout_constraintEnd_toEndOf="@+id/tv_header_home" />
+
+    <HorizontalScrollView
+        android:id="@+id/horizontal_sv_home_options"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/civ_user_home">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:clipToPadding="false"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_patients_home"
+                android:layout_width="144dp"
+                android:layout_height="match_parent"
+                android:outlineProvider="none"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="23dp"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/tv_patients_home"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginBottom="16dp"
+                        android:fontFamily="@font/vazir_bold"
+                        android:gravity="center"
+                        android:text="لیست بیماران"
+                        android:textColor="@color/navyBlue"
+                        android:textSize="14sp" />
+
+                    <ImageView
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="20dp"
+                        android:background="@drawable/bg_patients_home" />
+
+                </RelativeLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_finance_home"
+                android:layout_width="144dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="16dp"
+                android:outlineProvider="none"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="23dp"
+                app:layout_constraintEnd_toStartOf="@id/cv_patients_home">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/tv_finance_home"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginBottom="16dp"
+                        android:fontFamily="@font/vazir_bold"
+                        android:gravity="center"
+                        android:text="درآمد این ماه"
+                        android:textColor="@color/navyBlue"
+                        android:textSize="14sp" />
+
+                    <ImageView
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="20dp"
+                        android:background="@drawable/bg_finance_home" />
+
+                </RelativeLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </HorizontalScrollView>
+
+    <TextView
+        android:id="@+id/tv_quote_header_home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="84dp"
+        android:fontFamily="@font/vazir_bold"
+        android:text="سخن بزرگان"
+        android:textColor="@color/navyBlue"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/horizontal_sv_home_options" />
+
+    <TextView
+        android:id="@+id/tv_quote_home"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="84dp"
+        android:background="@drawable/bg_tv_home"
+        android:fontFamily="@font/vazir_bold"
+        android:paddingStart="24dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="24dp"
+        android:paddingBottom="16dp"
+        android:text="“آینده از آن کسانی است که به استقبال آن می‌روند.”"
+        android:textColor="@color/navyBlue"
+        android:textSize="14sp"
+        app:layout_constraintTop_toBottomOf="@id/tv_quote_header_home" />
+
+    <ImageView
+        android:id="@+id/iv_quote_home"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/bg_quote_home"
+        app:layout_constraintBottom_toBottomOf="@id/tv_quote_home"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_today_header_home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="84dp"
+        android:fontFamily="@font/vazir_bold"
+        android:text="برنامه امروز"
+        android:textColor="@color/navyBlue"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_quote_home" />
+
+    <ImageView
+        android:id="@+id/iv_today_bg_home"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="84dp"
+        android:background="@drawable/bg_tv_home"
+        android:paddingStart="24dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="24dp"
+        android:paddingBottom="16dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_today_header_home" />
+
+    <ImageView
+        android:id="@+id/iv_tasks_home"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/bg_tasks_home"
+        app:layout_constraintBottom_toBottomOf="@id/iv_today_bg_home"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_upcoming_header_home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="84dp"
+        android:fontFamily="@font/vazir_bold"
+        android:text="به زودی"
+        android:textColor="@color/navyBlue"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_today_bg_home" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_upcoming_home"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="84dp"
+        android:outlineProvider="none"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="40dp"
+        app:layout_constraintEnd_toStartOf="@id/iv_upcoming_home"
+        app:layout_constraintTop_toBottomOf="@id/tv_upcoming_header_home">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="12dp"
+            android:gravity="end">
+
+            <TextView
+                android:id="@+id/tv_upcoming_patient_name_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:fontFamily="@font/vazir_bold"
+                android:gravity="center"
+                android:text="رضا باقری"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/tv_upcoming_patient_problem_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:fontFamily="@font/vazir_thin"
+                android:gravity="center"
+                android:text="تراش دندان"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <ImageView
+        android:id="@+id/iv_upcoming_home"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/bg_upcoming_home"
+        app:layout_constraintBottom_toBottomOf="@id/cv_upcoming_home"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
