--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -8,7 +8,7 @@
     tools:context=".TasksActivity">
 
     <TextView
-        android:id="@+id/txt_header_tasks"
+        android:id="@+id/tv_header_tasks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
