--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -7,6 +7,14 @@
     android:background="@color/layoutGrey"
     tools:context=".TasksActivity">
 
+    <ImageView
+        android:id="@+id/iv_header_bg_tasks"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/bg_layout_header"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/rv_calendar_tasks"/>
+
     <TextView
         android:id="@+id/tv_header_tasks"
         android:layout_width="wrap_content"
@@ -19,6 +27,41 @@
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_month_tasks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="24dp"
+        android:fontFamily="@font/vazir_medium"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_header_tasks" />
+
+    <Button
+        android:id="@+id/btn_today_tasks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="36dp"
+        android:background="@color/transparent"
+        android:fontFamily="@font/vazir_regular"
+        android:text="امروز"
+        android:textColor="@color/orange"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_calendar_tasks"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:scrollbars="horizontal"
+        android:background="@color/transparent"
+        app:layout_constraintTop_toBottomOf="@id/tv_month_tasks"/>
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
