--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="orange">#FF7603</color>
     <color name="checkGreen">#6BCF00</color>
     <color name="ignoreRed">#CF0000</color>
+    <color name="expenseRed">#e02020</color>
     <color name="transparent">#00000000</color>
 </resources>
