--- a/app/src/main/res/layout/activity_add_finance.xml
+++ b/app/src/main/res/layout/activity_add_finance.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/layoutGrey">
-
+    android:background="@color/layoutGrey"
+    tools:context=".AddFinanceActivity">
 
     <ImageView
-        android:id="@+id/iv_header_appointment_add"
+        android:id="@+id/iv_header_finance_add"
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:background="@color/white"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_header_appointment_add"
+        android:id="@+id/tv_header_finance_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:fontFamily="@font/vazir_bold"
-        android:text="فعالیت درمانی"
+        android:text="افزودن تراکنش"
         android:textColor="@color/black"
         android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="@id/iv_header_appointment_add"
+        app:layout_constraintBottom_toBottomOf="@id/iv_header_finance_add"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/iv_header_appointment_add" />
+        app:layout_constraintTop_toTopOf="@id/iv_header_finance_add" />
 
     <Button
-        android:id="@+id/btn_back_appointment_add"
+        android:id="@+id/btn_back_finance_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -37,78 +38,49 @@
         android:text="بازگشت"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_header_appointment_add"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_header_finance_add"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <EditText
-        android:id="@+id/et_disease_appointment_add"
+        android:id="@+id/et_title_finance_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/bg_et_rounded_rectangle"
-        android:fontFamily="@font/vazir_regular"
-        android:gravity="start"
-        android:hint="دلیل ویزیت"
-        android:imeOptions="actionNext"
-        android:inputType="text"
-        android:padding="16dp"
-        android:singleLine="true"
-        android:textColor="@color/black"
-        android:textColorHint="@color/hintGrey"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/iv_header_appointment_add" />
-
-    <EditText
-        android:id="@+id/et_price_appointment_add"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="48dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/bg_et_rounded_rectangle"
         android:fontFamily="@font/vazir_regular"
         android:gravity="right"
-        android:hint="هزینه درمان"
-        android:inputType="number"
+        android:hint="عنوان"
+        android:imeOptions="actionNext"
+        android:inputType="text"
         android:maxLines="1"
         android:padding="16dp"
         android:textColor="@color/black"
         android:textColorHint="@color/hintGrey"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/et_disease_appointment_add" />
+        app:layout_constraintTop_toBottomOf="@id/iv_header_finance_add" />
 
-    <Button
-        android:id="@+id/btn_time_appointment_add"
+    <EditText
+        android:id="@+id/et_amount_finance_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="48dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/bg_et_rounded_rectangle"
-        android:drawableEnd="@drawable/ic_calendar"
-        android:drawablePadding="12dp"
         android:fontFamily="@font/vazir_regular"
-        android:gravity="start"
+        android:gravity="right"
+        android:hint="مقدار (تومان)"
+        android:imeOptions="actionNext"
+        android:inputType="text"
+        android:maxLines="1"
         android:padding="16dp"
-        android:text="تاریخ و ساعت"
         android:textColor="@color/black"
+        android:textColorHint="@color/hintGrey"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/et_price_appointment_add" />
+        app:layout_constraintTop_toBottomOf="@id/et_title_finance_add" />
 
-    <Button
-        android:id="@+id/btn_submit_appointment_add"
-        android:layout_width="132dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/bg_rounded_orange_btn"
-        android:fontFamily="@font/vazir_bold"
-        android:text="ثبت"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_time_appointment_add" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
