--- a/app/src/main/res/layout/card_view_calendar_tasks.xml
+++ b/app/src/main/res/layout/card_view_calendar_tasks.xml
@@ -3,35 +3,38 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="48dp"
     android:layout_height="80dp"
-    app:cardBackgroundColor="@color/transparent">
+    android:layout_marginBottom="16dp"
+    android:outlineProvider="none"
+    android:background="@drawable/bg_tasks_calendar_item"
+    app:cardBackgroundColor="@color/white">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/tv_day_initial"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
             android:layout_marginTop="16dp"
+            android:gravity="center"
             android:fontFamily="@font/vazir_bold"
             android:textColor="@color/textGrey"
-            android:textSize="13sp" />
+            android:textSize="12sp"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_day_no"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
             android:fontFamily="@font/vazir_bold"
             android:textColor="@color/black"
-            android:textSize="14sp" />
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
