--- a/app/src/main/res/layout/appointment_add_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/appointment_add_spinner_dropdown_item.xml
@@ -2,12 +2,12 @@
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
     style="?android:attr/spinnerDropDownItemStyle"
-    android:singleLine="true"
     android:layout_width="match_parent"
-    android:textColor="@color/black"
+    android:layout_height="wrap_content"
     android:background="@color/white"
-    android:textAlignment="viewEnd"
+    android:fontFamily="@font/vazir_medium"
     android:padding="16dp"
-    android:fontFamily="@font/vazir_regular"
-    android:textSize="16sp"
-    android:layout_height="wrap_content" />
+    android:singleLine="true"
+    android:textAlignment="viewEnd"
+    android:textColor="@color/black"
+    android:textSize="16sp" />
