--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="hintGrey">#878787</color>
     <color name="textGrey">#a4a5a8</color>
     <color name="navBarGrey">#D8D8D8</color>
+    <color name="searchGrey">#eaeef5</color>
     <color name="fieldBorderGrey">#F0F0F0</color>
     <color name="navyBlue">#2C2E51</color>
     <color name="carbonBlue">#6582BC</color>
